dev/styles/main/contentElements/bigIconTextButton.less
// =========================================================
// === Big icon text btn ===================================
// =========================================================
.big-icon-text-btn__header {
    // text-transform: uppercase;
}

.big-icon-text-btn {
    text-align: center;
    padding: 36px 16px;
}

.big-icon-text-btn__link {
    font-size: 16px;

    &:after {
        .icons();
        // content: '\e675';
        position: relative;
        display: inline-block;
        vertical-align: bottom;
        font-size: 19px;
        margin-left: 8px;
        padding: 3px;
    }
}

.big-icon-text-btn__p {
    margin-bottom: 18px;
}

.big-icon-text-btn__icon {
    padding: 30px;
    border: 2px solid tint(@main-color, 70%);
    color: @main-color;
    border-radius: 55px;
    margin-right: 0;
    margin-bottom: 10px;
    font-size: 46px;
    display: inline-block;
}

// =========================================================
// =========================================================

